--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -2,7 +2,7 @@
   "@@locale": "pt",
   "please_check_your_connection": "Por favor, verifique sua conexão",
   "server_error": "Erro de servidor",
-  "access_to_location_denied": "Acesso ao local negado",
+  "access_to_location_denied": "Acesso a localização negado",
   "allow_access_to_the_location_services": "Permitir acesso aos serviços de localização.",
   "access_to_location_permanently_denied": "Acesso ao local negado permanentemente",
   "allow_access_to_the_location_services_from_settings": "Permita o acesso aos serviços de localização para este aplicativo usando as configurações do dispositivo.",
@@ -10,7 +10,7 @@
   "cant_get_current_location": "Não é possível obter a localização atual",
   "please_make_sure_you_enable_gps_and_try_again": "Certifique-se de ativar o GPS e tente novamente",
   "search_place": "Pesquisar endereço",
-  "finding_place": "Finding place...",
-  "no_result_found": "No result found",
+  "finding_place": "Encontrando lugar...",
+  "no_result_found": "Nenhum resultado encontrado",
   "unnamedPlace": "Lugar sem nome"
 }
